// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonSpinner > should render 1`] = `
<div>
  <div
    class="css-1nn240v"
  />
</div>
`;

exports[`ButtonSpinner > should render a danger variant 1`] = `
<div>
  <div
    class="css-1nn240v"
    color="danger"
  />
</div>
`;

exports[`ButtonSpinner > should render a info variant 1`] = `
<div>
  <div
    class="css-1nn240v"
    color="info"
  />
</div>
`;

exports[`ButtonSpinner > should render a primary variant 1`] = `
<div>
  <div
    class="css-1nn240v"
    color="primary"
  />
</div>
`;

exports[`ButtonSpinner > should render a reverse variant 1`] = `
<div>
  <div
    class="css-1nn240v"
    color="reverse"
  />
</div>
`;

exports[`ButtonSpinner > should render a secondary variant 1`] = `
<div>
  <div
    class="css-1nn240v"
    color="secondary"
  />
</div>
`;

exports[`ButtonSpinner > should render a transparent variant 1`] = `
<div>
  <div
    class="css-1nn240v"
    color="transparent"
  />
</div>
`;
